--- a/src/plonefr.theme/src/plonefr/theme/static/static/css/themediazotheme.css
+++ b/src/plonefr.theme/src/plonefr/theme/static/static/css/themediazotheme.css
@@ -408,62 +408,6 @@ background-position: right bottom;
 .feature:nth-of-type(3n+4) {
     clear: left;
 }
-.feature h3,
-.section-features #portlets-below h2,
-.diazo-index .BelowPortletManager1 h2 {
-    text-align: center;
-    padding-top: 130px;
-    background-image: url('../images/feature_icons.png');
-    background-repeat: no-repeat;
-}
-.feature.multilingual h3 {
-    background-position: center 0;
-}
-.feature.installing h3 {
-    background-position: center -250px;
-}
-.feature.authentication h3 {
-    background-position: center -500px;
-}
-.feature.extensibility h3,
-.portlet-static-limitless-extensibility h2 {
-    background-position: center -750px;
-}
-.feature.documentation h3 {
-    background-position: center -1000px;
-}
-.feature.designer h3 {
-    background-position: center -1250px;
-}
-.feature.search h3 {
-    background-position: center -1500px;
-}
-.feature.enterprise h3,
-.portlet-static-enterprise-integration h2 {
-    background-position: center -1750px;
-}
-.feature.multisite h3 {
-    background-position: center -2000px;
-}
-.feature.workflows h3,
-.portlet-static-flexible-workflows h2 {
-    background-position: center -2250px;
-}
-.feature.security h3,
-.portlet-static-industrial-strength-security h2 {
-    background-position: center -2500px;
-}
-.feature.scalability h3,
-.portlet-static-robust-scalability h2 {
-    background-position: center -2750px;
-}
-.feature.accessibility h3 {
-    background-position: center -3000px;
-}
-.feature.intranet h3 {
-    background-position: center -3250px;
-}
-
 /*           PROVIDERS                  */
 .template-folder_listing.section-providers #content-core a {
     background: none !important;
@@ -964,4 +908,252 @@ body.section-homepage-content.subsection-key-features #content-core li {
 body.section-homepage-content.subsection-key-features #content-core li:first-child {
     width: 20%;
     margin-left: 0;
+}
+
+/* Tune up mosaic */
+.mosaic-enabled .mosaic-grid-row:before,
+.mosaic-enabled .mosaic-grid-row:after,
+.mosaic-enabled .mosaic-grid-row:before,
+.mosaic-enabled .mosaic-grid-row:after,
+.mosaic-grid .mosaic-grid-row:before,
+.mosaic-grid .mosaic-grid-row:after,
+.mosaic-grid .mosaic-grid-row:before,
+.mosaic-grid .mosaic-grid-row:after,
+.template-layout .mosaic-grid-row:before,
+.template-layout .mosaic-grid-row:after,
+.template-layout .mosaic-grid-row:before,
+.template-layout .mosaic-grid-row:after {
+  content: " ";
+  display: table;
+}
+.mosaic-enabled .mosaic-grid-row:after,
+.mosaic-enabled .mosaic-grid-row:after,
+.mosaic-grid .mosaic-grid-row:after,
+.mosaic-grid .mosaic-grid-row:after,
+.template-layout .mosaic-grid-row:after,
+.template-layout .mosaic-grid-row:after {
+  clear: both;
+}
+.mosaic-enabled,
+.mosaic-grid,
+.template-layout {
+  /* Grid classes, these can also be nested */
+}
+.mosaic-enabled .mosaic-grid-row,
+.mosaic-grid .mosaic-grid-row,
+.template-layout .mosaic-grid-row {
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.mosaic-enabled,
+.mosaic-grid {
+  /* Widths, these are abstracted out so that pixel-based layouts or other
+     similar approaches can be retrofitted without changing the markup,
+     or if you want to apply rules like the Golden Ratio to your layouts */
+}
+.mosaic-enabled .mosaic-width-full,
+.mosaic-grid .mosaic-width-full {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.mosaic-enabled .mosaic-width-half,
+.mosaic-grid .mosaic-width-half {
+  position: relative;
+  float: left;
+  width: 50%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.mosaic-enabled .mosaic-width-quarter,
+.mosaic-grid .mosaic-width-quarter {
+  position: relative;
+  float: left;
+  width: 25%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.mosaic-enabled .mosaic-width-three-quarters,
+.mosaic-grid .mosaic-width-three-quarters {
+  position: relative;
+  float: left;
+  width: 75%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.mosaic-enabled .mosaic-width-third,
+.mosaic-grid .mosaic-width-third {
+  position: relative;
+  float: left;
+  width: 33.33333333%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.mosaic-enabled .mosaic-width-two-thirds,
+.mosaic-grid .mosaic-width-two-thirds {
+  position: relative;
+  float: left;
+  width: 66.66666667%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.template-layout {
+  /* Widths, these are abstracted out so that pixel-based layouts or other
+     similar approaches can be retrofitted without changing the markup,
+     or if you want to apply rules like the Golden Ratio to your layouts */
+}
+.template-layout .mosaic-width-full {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.template-layout .mosaic-width-half {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .template-layout .mosaic-width-half {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 768px) {
+  .template-layout .mosaic-width-half {
+    float: left;
+    width: 50%;
+  }
+}
+.template-layout .mosaic-width-quarter {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .template-layout .mosaic-width-quarter {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 768px) {
+  .template-layout .mosaic-width-quarter {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-quarter {
+    float: left;
+    width: 25%;
+  }
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-quarter {
+    float: left;
+    width: 25%;
+  }
+}
+.template-layout .mosaic-width-three-quarters {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-three-quarters {
+    float: left;
+    width: 75%;
+  }
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-three-quarters {
+    float: left;
+    width: 75%;
+  }
+}
+.template-layout .mosaic-width-third {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-third {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-third {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+.template-layout .mosaic-width-two-thirds {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-two-thirds {
+    float: left;
+    width: 66.66666667%;
+  }
+}
+@media (min-width: 992px) {
+  .template-layout .mosaic-width-two-thirds {
+    float: left;
+    width: 66.66666667%;
+  }
+}
+.mosaic-grid-row-dark {
+    background-color: #303030;
+    margin: 0 -2em !important;
+}
+
+.mosaic-grid-row-dark .mosaic-tile-content {
+    text-align: center;
+    padding: 3em 2em 2em;
+}
+.mosaic-grid-row-dark .mosaic-tile-content p {
+  color: #fff;
+  font-size: 0.95em;
+}
+.mosaic-grid-row-dark .mosaic-tile-content h3 {
+  color: #00bef1;
+  font-weight: 300;
+  font-size: 1.5rem;
+  line-height: 1.25em;
+  text-transform: uppercase;
+    padding-top: 130px;
+    background-image: url(../images/feature_icons.png);
+    background-repeat: no-repeat;
+    background-position: center -750px;
+}
+.mosaic-grid-row-dark .mosaic-position-leftmost h3 {
+    background-position: center -1750px;
+}
+.mosaic-grid-row-dark .mosaic-position-quarter h3 {
+    background-position: center -2250px;
+}
+.mosaic-grid-row-dark .mosaic-position-half h3 {
+    background-position: center -2500px;
+}
+.mosaic-grid-row-dark .mosaic-position-three-quarters h3 {
+    background-position: center -2750px;
 }
